fixing home logo on smaller screens

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -59,7 +59,7 @@
 }
 
 .home-logo {
-  height: clamp(160px, 30vw, 360px);
+  height: clamp(120px, 30vw, 360px);
   width: auto;
 }
 
